fix : add overflow hidden

--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ nav .bottom .call {
   gap: 25px;
 }
 
+.hero-section .container{
+  overflow: hidden;
+}
+
 .hero-section .wrapper {
   background-image: url("/assets/images/her-bg.png");
   background-size: cover;
